Project

General

Profile

Actions

Bug #45803

closed

[rbd-mirror] loss of lock might result in asserting failure when starting journal replay

Added by Jason Dillaman almost 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the exclusive lock is lost (e.g. by being blacklisted), the pre-release state machine will close the journal. However, this could race with the rbd-mirror journal replayer starting an external replay resulting in an assertion failure.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #45881: octopus: [rbd-mirror] loss of lock might result in asserting failure when starting journal replayResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman almost 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 35339
Actions #2

Updated by Mykola Golub almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45881: octopus: [rbd-mirror] loss of lock might result in asserting failure when starting journal replay added
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF